--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*{
+  margin : 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,85 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.appDisplay{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: lightgray;
+}
+
+.titleHeader{
+  width : 100%;
+  background-color: black; 
+  color : white;
+  /* margin-bottom: 20px; */
+  height: 70px;
+  font-size: 3vw;
+  font-weight: bolder;
+}
+
+.searcher{
+  width : 80%;
+}
+
+.formSearch{
+  width : 100%;
+  margin-bottom: 20px;
+}
+
+.contentInput{
+  margin :0px 20px 0px 3px;
+  border-right: thin solid gray;
+}
+
+.submitForm{
+  border : thin solid black;
+  padding: 10px;
+  background-color: gray;
+  width : 100%;
+  margin-bottom: 20px;
+}
+
+label{
+  border-left: thick solid black;
+  padding-left: 13px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+input{
+  border-radius: 7px;
+}
+
+input[type='submit']{
+  background-color: green;
+  color: white;
+  margin-top: 10px;
+  width : 80px;
+}
+
+table{
+  width : 80%;
+  margin : 0px auto;
+  border-collapse: collapse;
+}
+
+th{
+  padding-bottom: 10px;
+  border-bottom: thick black solid;
+
+}
+
+.transactionRow{
+border-bottom: thin black solid;
+padding: 110px;
+}
+
+td{
+  padding: 20px;
 }
